set result store, fixed selected radio style

--- a/src/styles/Mcq.css
+++ b/src/styles/Mcq.css
@@ -90,7 +90,7 @@ input[type='radio']:checked ~ .check {
 }
 
 input[type='radio']:checked ~ .check::before {
-    background: whitesmoke;
+    background: var(--clr-secondary);
 }
 
 input[type='radio']:checked ~ .radio_lable {
