--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -13,7 +13,7 @@
     margin: 24px;
 }
 .app_title {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: sans-serif;
     font-size: 32px;
     font-weight: 800;
     color: var(--clr-accent);
@@ -34,7 +34,7 @@
 }
 
 .title_body {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: sans-serif;
     font-size: 48px;
     font-weight: 800;
     color: white;
@@ -52,7 +52,7 @@ button {
     font-size: 24px;
     padding: 8px;
     font-weight: 600;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: sans-serif;
     cursor: pointer;
 }
 button:hover {
@@ -62,7 +62,7 @@ button:hover {
 .user-menu {
     position: relative;
     font-size: 24px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: sans-serif;
     font-weight: 600;
     padding: 8px;
     color: var(--clr-secondary);
@@ -116,7 +116,11 @@ button:hover {
     cursor: pointer;
     font-size: 18px;
     font-weight: 600;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: sans-serif;
+}
+.course:hover {
+    background-color: var(--clr-secondary);
+    color: whitesmoke;
 }
 .logout:hover {
     background-color: var(--clr-secondary);
