--- a/src/styles/Course_dashboard.css
+++ b/src/styles/Course_dashboard.css
@@ -9,23 +9,33 @@
     );
 }
 .courses-container {
-    max-width: 800px;
-    margin: 0 auto;
+    width: 80%;
+    margin: 24px auto;
     padding: 20px;
+    height: 100vh;
+}
+.courses-container h2 {
+    font-size: 36px;
+    font-family: sans-serif;
+    font-weight: 700;
+    color: whitesmoke;
+    text-align: center;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(4, minmax(250px, 1fr));
     grid-gap: 20px;
 }
 
 .course-card {
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    border: 2px solid var(--clr-accent);
+    border-radius: 10px;
     padding: 20px;
     text-align: center;
     background-color: whitesmoke;
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    border-radius: 10px;
 }
 
 .course-card h3 {
@@ -35,8 +45,9 @@
 .btn {
     display: inline-block;
     padding: 8px 16px;
-    background-color: #007bff;
-    color: #fff;
+    background-color: var(--clr-accent);
+    color: var(--clr-secondary);
+    font-weight: 600;
     border: none;
     border-radius: 5px;
     text-decoration: none;
